<resources>
    <string name="app_name">Fonz</string>
    <string name="data_placeholder">--</string>


    <!-- Actions -->
    <string name="action_new_game">Start</string>
    <string name="action_end_game">End</string>
    <string name="action_pause_game">Pause</string>
    <string name="action_resume_game">Resume</string>
    <string name="action_no_thanks">No, Thanks</string>
    <string name="action_clear_scores">Clear</string>
    <string name="action_settings">Options</string>
    <string name="action_help">Tutorial</string>
    <string name="action_done">Done</string>
    <string name="action_restore_defaults">Restore Defaults</string>
    <string name="action_high_scores">High Scores</string>
    <string name="action_trophy_room">Achievements</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_share">Share</string>


    <!-- Alerts -->
    <string name="alert_game_over_title">Game Over</string>
    <string name="alert_game_over_message_fmt">You\'ve achieved a new high score of %1$s</string>
    <string name="alert_clear_scores_confirm_title">Clear Scores</string>
    <string name="alert_clear_scores_confirm_message">Are you sure you want to clear your high scores? This operation cannot be undone.</string>
    <string name="alert_clear_achievements_confirm_title">Clear Achievements</string>
    <string name="alert_clear_achievements_confirm_message">Are you sure you want to clear your achievements? This operation cannot be undone.</string>


    <!-- Labels -->
    <string name="label_name_field">Name</string>
    <string name="label_lives">Lives</string>
    <string name="label_score">Score</string>


    <!-- Settings -->
    <string name="settings_section_game_play">Game Play</string>
    <string name="title_setting_tap_to_skip_piece">Tap to skip piece</string>
    <string name="info_setting_tap_to_skip_piece">When enabled, tapping on the upcoming piece in the center of the game board will advance to the next piece, and deduct one life.</string>
    <string name="title_setting_prevent_duplicate_pieces">Prevent duplicate pieces</string>
    <string name="info_setting_prevent_duplicate_pieces">When enabled, you will never get the same pie piece twice in a row.</string>
    <string name="title_setting_timer_scale_factor">Timer scale factor</string>
    <string name="info_setting_timer_scale_factor">The fraction the game timer\'s duration is multiplied by after a pie is completed.</string>
    <string name="settings_section_options">Options</string>
    <string name="settings_version_fmt">Version %1$s (%2$s, %3$s)</string>


    <!-- Achievements -->
    <string name="achievement_unlocked_template">Achievement Unlocked: {}</string>
    <string name="achievement_share_title">My Fonz Achievement</string>
    <string name="achievement_first_single_color_pie">Color coordinated</string>
    <string name="achievement_description_first_single_color_pie">You\'ve completed a pie with a single color.</string>
    <string name="achievement_first_power_up">Powered up</string>
    <string name="achievement_description_first_power_up">You\'ve unlocked a power up.</string>
    <string name="achievement_first_high_score">Score board worthy</string>
    <string name="achievement_description_first_high_score">You\'ve made it onto the score board.</string>
    <string name="achievement_beat_the_clock">Beat the clock</string>
    <string name="achievement_description_beat_the_clock">You placed a piece just before time ran out.</string>
    <string name="achievement_all_power_ups_unlocked">Power mad!</string>
    <string name="achievement_description_all_power_ups_unlocked">You\'ve unlocked all the power ups at once in a single game.</string>
    <string name="achievement_king_of_lives">All the lives!</string>
    <string name="achievement_description_king_of_lives">You\'ve gotten more than 20 lives.</string>
    <string name="achievement_score_over_1_000">Quadruple digit club</string>
    <string name="achievement_description_score_over_1_000">You\'ve scored over 1,000 points in a single game.</string>
    <string name="achievement_score_over_10_000">It\'s over 9,000!</string>
    <string name="achievement_description_score_over_10_000">You\'ve scored over 10,000 points in a single game.</string>
    <string name="achievement_score_over_100_000">That\'s a big score!</string>
    <string name="achievement_description_score_over_100_000">You\'ve scored over 100,000 points in a single game.</string>
    <string name="achievement_score_over_1_000_000">Go outside!</string>
    <string name="achievement_description_score_over_1_000_000">You\'ve scored over 1,000,000 points in a single game.</string>
</resources>
