<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/activity_main_lives_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/gap_small"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/label_lives" />

    <TextView
        android:id="@+id/view_stats_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_main_lives_label"
        android:layout_below="@id/activity_main_lives_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/data_placeholder"/>

    <TextView
        android:id="@+id/activity_main_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/gap_small"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/label_score" />

    <TextView
        android:id="@+id/view_stats_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/activity_main_score_label"
        android:layout_below="@id/activity_main_score_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/data_placeholder"/>

</merge>