<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_main_lives_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/gap_small"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/label_lives" />

    <TextView
        android:id="@+id/activity_main_lives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/activity_main_lives_label"
        android:layout_below="@id/activity_main_lives_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/data_placeholder"/>

    <TextView
        android:id="@+id/activity_main_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/gap_small"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/label_score" />

    <TextView
        android:id="@+id/activity_main_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/activity_main_score_label"
        android:layout_below="@id/activity_main_score_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/data_placeholder"/>

    <Button
        android:id="@+id/activity_main_game_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/gap_small"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="Start Game"
        style="@style/Widget.AppCompat.Button.Borderless.Colored" />

    <com.kevinmacwhinnie.fonz.view.BoardView
        android:id="@+id/activity_main_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/gap_small"
        android:layout_above="@id/activity_main_game_control"
        android:layout_below="@id/activity_main_score"/>
    
</RelativeLayout>
